<resources>
    <string name="app_name">Smart Vest</string>
    <string name="smart_vest_icon_stroke">smart vest icon</string>
    <string name="login_worker">작업자 로그인</string>
    <string name="login_manager">관리자 로그인</string>
    <string name="text_login">로그인</string>
    <string name="text_logout">로그아웃</string>
    <string name="text_manager">관리자</string>
    <string name="text_id_hint">아이디를 입력하세요.</string>
    <string name="text_pw_hint">비밀번호를 입력하세요.</string>
    <string name="text_id">ID</string>
    <string name="text_pw">PASSWORD</string>
    <string name="text_login_worker">작업자 로그인</string>
    <string name="text_port_select">항만 선택</string>
    <string name="text_port_hint">항만을 선택하세요.</string>
    <string name="text_wharf_select">부두 선택</string>
    <string name="text_wharf_hint">부두를 선택하세요.</string>
    <string name="text_company_select">소속 회사 선택</string>
    <string name="text_company_hint">소속 회사를 선택하세요.</string>
    <string name="text_location_manager">작업자 위치 확인하기</string>
    <string name="text_safety_manager">작업자 위험도 확인하기</string>
    <string name="text_number">번호</string>
    <string name="text_danger">위험요인</string>
    <string name="text_safety">안전도</string>
    <string name="text_location_worker">내 위치 확인하기</string>
    <string name="text_safety_worker">안전도 상세보기</string>
    <string name="text_manual_worker">매뉴얼</string>
    <string name="text_report_worker">신고 접수</string>
    <string name="text_my_vest_number">"내 조끼 번호  |  "</string>
    <string name="text_vest_connection">"조끼 연결 상태  |  "</string>
    <string name="text_worker_count">"현재 작업자 수  |  "</string>
    <string name="text_manual_smartvest">스마트 조끼 매뉴얼</string>
    <string name="text_manual_general">해상작업 일반\n안전 매뉴얼</string>
    <string name="text_manual_general2">해상작업 일반 안전 매뉴얼</string>
    <string name="text_manual_construct">항만 건설 작업자\n안전 매뉴얼</string>
    <string name="text_manual_construct2">항만 건설 작업자 안전 매뉴얼</string>
    <string name="text_manual_load">항만 하역 작업자\n안전 매뉴얼</string>
    <string name="text_manual_test">항만내 검수 작업자\n안전 매뉴얼</string>
    <string name="text_manual_transport">항만 운송 작업자\n안전 매뉴얼</string>
    <string name="text_manual_vest_connect">스마트조끼와\n블루투스 연결하기</string>
    <string name="text_manual_vest_connect2">스마트조끼와 블루투스 연결하기</string>
    <string name="text_manual_vest_func">스마트조끼 기능</string>
    <string name="text_safety_methane">메탄 가스 (CH4)</string>
    <string name="text_safety_methane_info">가연성 가스의 위험수치 값 500ppm 기준</string>
    <string name="text_safety_lpg">LPG 가스</string>
    <string name="text_safety_lpg_info">가연성 가스의 위험수치 값 500ppm 기준</string>
    <string name="text_safety_carbon">일산화탄소 (CO)</string>
    <string name="text_safety_carbon_info">가연성 가스의 위험수치 값 500ppm 기준</string>
    <string name="text_safety_temp">온도 / 습도</string>
    <string name="text_safety_temp_info">온도 26도 / 습도 40% 기준</string>
    <string name="degree">℃</string>
    <string name="text_input_name">이름</string>
    <string name="text_name_hint">이름을 입력하세요.</string>
    <string name="text_bluetooth_connect">블루투스 연결하기</string>
    <string name="url">https://www.safetysmartvest.com/smartvest/</string>
    <string name="danger_zone_1">35.525026,129.371334,35.523742,129.370771,35.523284,129.371833,35.524764,129.372622,35.525066,129.371688,35.525026,129.371334</string>
    <string name="danger_zone_2">35.521976,129.369755,35.522029,129.369723,35.522212,129.369669,35.522369,129.369691,35.523164,129.370109,35.523338,129.369379,35.522631,129.368907,35.522518,129.369111,35.521593,129.368651,35.521085,129.370415,35.521650,129.370651,35.521976,129.369755</string>
    <string name="noti_report_title">신고 알림</string>
    <string name="noti_report_content">번 작업자가 신고하였습니다.</string>
    <string name="noti_warning_title">작업자 위험</string>
    <string name="noti_warning_content">번 작업자의 안전도가 위험상태입니다.</string>

</resources>
