<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar_underline"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/back_login_manager"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/left_arrow" />

        <TextView
            android:id="@+id/text_login_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_manager"
            android:textColor="@color/app_name_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_manager"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/smart_vest_icon_stroke" />

            <TextView
                android:id="@+id/text_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_manager"
                android:textColor="@color/app_name_color"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                android:id="@+id/text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_id"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:hint="@string/text_id_hint"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/app_name_color"
                android:textColorHint="@color/hint_color" />

            <TextView
                android:id="@+id/text_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/text_pw"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:hint="@string/text_pw_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/app_name_color"
                android:textColorHint="@color/hint_color" />

            <Button
                android:id="@+id/button_login_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/buttonshape"
                android:text="@string/text_login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>