<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape_dark_gray"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/my_vest_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_my_vest_number" />

            <TextView
                android:id="@+id/vest_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bluetooth_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape_dark_gray"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vest_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bluetooth_connect" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_color"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ver_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"></androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hor_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"></androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hor_guide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"></androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_worker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/selector_location_mgr"
            android:padding="2dp"
            app:layout_constraintBottom_toTopOf="@id/hor_guide"
            app:layout_constraintEnd_toStartOf="@id/ver_guide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo_location_worker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintWidth_percent="0.45"
                app:srcCompat="@drawable/manager_location_check" />

            <TextView
                android:id="@+id/text_location_worker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_location_worker"
                android:textColor="@color/app_name_color"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_location_worker"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/safety_worker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/selector_location_mgr"
            android:padding="2dp"
            app:layout_constraintBottom_toTopOf="@id/hor_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ver_guide"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/safety_state_worker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보통"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_safety_worker"
                app:layout_constraintVertical_bias="0" />

            <ImageView
                android:id="@+id/logo_safety_worker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintWidth_percent="0.45"
                app:srcCompat="@drawable/safety_normal" />

            <TextView
                android:id="@+id/text_safety_worker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_safety_worker"
                android:textColor="@color/app_name_color"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_safety_worker"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manual_worker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/selector_location_mgr"
            android:padding="2dp"
            app:layout_constraintBottom_toTopOf="@id/hor_guide2"
            app:layout_constraintEnd_toStartOf="@id/ver_guide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hor_guide">

            <ImageView
                android:id="@+id/logo_manual_worker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintWidth_percent="0.45"
                app:srcCompat="@drawable/worker_manual" />

            <TextView
                android:id="@+id/text_manual_worker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_manual_worker"
                android:textColor="@color/app_name_color"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_manual_worker"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/report_worker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/selector_location_mgr"
            android:padding="2dp"
            app:layout_constraintBottom_toTopOf="@id/hor_guide2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ver_guide"
            app:layout_constraintTop_toBottomOf="@id/hor_guide">

            <ImageView
                android:id="@+id/logo_report_worker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintWidth_percent="0.45"
                app:srcCompat="@drawable/worker_report" />

            <TextView
                android:id="@+id/text_report_worker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_report_worker"
                android:textColor="@color/red_color"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_report_worker"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/logout_worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/buttonshape_dark_gray"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/text_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hor_guide2"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>